# feaspump

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  tox.ini
src/feaspump/: __init__.py  base.py  classic.py  diff.py  mip.py
src/feaspump/_internals/: __init__.py  notifier.py
src/feaspump/cli/: export.py  main.py  options.py  run.py
src/feaspump/core/: __init__.py
src/feaspump/modules/: __init__.py  norm.py  reduce.py  round.py  slacks.py  x1mx.py
src/feaspump/modules/integ/: __init__.py  mode.py
src/feaspump/modules/lp/: __init__.py  _utils.py  base.py  diff.py  lp.py  mode.py
src/feaspump/modules/round/: __init__.py  distribution.py
src/feaspump/pump/: __init__.py  base.py  callback.py  classic.py  diff.py  event.py  integ.py  lp.py  notifier.py  optim.py  reg.py  status.py  syncable.py
src/feaspump/pump/_utils/: __init__.py  flip.py  integ.py  lp.py
tests/: test_mip.py
